[package]
name = "rtf-grimoire"
version = "0.1.0"
edition = "2018"
authors = ["Will Page <compenguy@gmail.com>"]
description = "A Rich Text File (RTF) document tokenizer. Useful for writing RTF parsers."
homepage = "https://github.com/compenguy/rtf-grimoire"
repository = "https://github.com/compenguy/rtf-grimoire"
readme = "README.md"
license = "MIT"
categories = ["parser-implementations"]
keywords = ["rtf"]

[dependencies]
nom = "4.2"

