[package]
name = "rtf-grimoire"
version = "0.2.0"
authors = ["Will Page <compenguy@gmail.com>"]
description = "A Rich Text File (RTF) document tokenizer. Useful for writing RTF parsers."
homepage = "https://github.com/compenguy/rtf-grimoire"
repository = "https://github.com/compenguy/rtf-grimoire"
readme = "README.md"
license = "MIT"
categories = ["parser-implementations"]
keywords = ["rtf"]
edition = "2021"
rust-version = "1.58" # Captured identifiers in format strings

[dependencies]
nom = "7.1.3"

